@@ -1,3 +1,14 @@
+2008-10-30 10:52  david_nichols
+
+	* qore-opengl-module.spec: include release notes in rpm
+
+2008-10-30 10:52  david_nichols
+
+	* ChangeLog, Makefile.am, README, RELEASE-NOTES, configure.ac,
+	  qore-opengl-module.spec, src/Makefile.am: updated to module
+	  handling from qore 0.7.1, qore 0.7.1 is the minimum required
+	  qore version for compiling now
+
 2008-10-23 06:30  david_nichols
 
 	* configure.ac: updated to set 64-bit compile mode by default on
